# RoboticHandPneumatic

./: .gitignore  CMakeLists.txt  README.md
3rdpart/: qextserialenumerator.cpp  qextserialport.cpp
include/: exception.h  mainwindow.h  whandgesture.h  zexception.h
src/: exception.cpp  main.cpp  mainwindow.cpp  whandgesture.cpp  zexception.cpp
